# fi

./: CMakeLists.txt  README.md
cmake/: Libraries.cmake
docs/design/: thoughts.md
include/fi/: buffer.h  term.h
src/: CMakeLists.txt  buffer.c  fi.c
src/posix/: CMakeLists.txt  term.c
